--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav {
     z-index: 11;
 }
 
-/* change navbar style on scroll using javascript */
+/* -- CHANGE NAVBAR STYLE ON SCROLL USING JAVASCRIPT -- */
 .window-scroll {
     background: rgba(46, 50, 103, 0.8);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
@@ -312,47 +312,42 @@ header {
     display: block;
 }
 
-/* -- Month Event -- */
-.months__container {
-    overflow-x: hidden;
-    position: relative;
-    margin-bottom: 5rem;
+/* -- EVENT -- */
+#event {
+    margin-top: 1rem;
 }
-
-.month {
-    padding-top: 2rem;
+.event__head {
+    display: flex;
+    justify-content: space-between;
 }
-
-.avatar {
-    width: 6rem;
-    height: 6rem;
-    border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto 1rem;
-    border: 1rem solid var(--color-bg1);
+.event__container p {
+    width: 45rem;
 }
-
-.month__info {
-    text-align: center;
-}
-
-.month__body {
-    background: var(--color-primary);
-    padding: 2rem;
+.swiper-wrapper {
     margin-top: 3rem;
-    position: relative;
+    height: 33rem;
+    padding-bottom: 1rem;
 }
-
-.month__body::before {
-    content: "";
-    display: block;
-    background: linear-gradient(135deg, transparent, var(--color-primary), var(--color-primary), var(--color-primary));
-    width: 3rem;
-    height: 3rem;
-    position: absolute;
-    left: 47%;
-    top: -1.5rem;
-    transform: rotate(45deg);
+.swiper-slide {
+    border: 0.5rem solid var(--color-bg2);
+    height: fit-content;
+    max-height: 36rem;
+    overflow: hidden;
+    transition: var(--transition);
+}
+.swiper-slide:hover {
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.4);
+}
+.swiper-slide img {
+    filter: saturate(0);
+    transition: var(--transition);
+    aspect-ratio: 1 / 1;
+}
+.swiper-slide:hover img {
+    filter: saturate(1);
+}
+.swiper-pagination-bullet {
+    background: var(--color-primary);
 }
 
 /* -- FOOTER -- */
@@ -533,6 +528,19 @@ footer ul li a:hover {
     padding: 1.5rem;
    }
 
+   /* -- EVENT -- */
+   #event {
+    margin-top: 1rem;
+   }
+   .event__container p {
+    width: 100%;
+    margin-top: 2rem;
+   }
+   .swiper-wrapper {
+    margin-top: 3rem;
+    height: 20rem
+   }
+
    /*  -- FOOTER -- */
    .footer__container {
     grid-template-columns: 1fr 1fr;
@@ -604,9 +612,13 @@ footer ul li a:hover {
         grid-template-columns: 1fr;
     }
 
-    /* -- MONTH EVENT -- */
-    .month__body {
-        padding: 1.2rem;
+    /* -- EVENT -- */
+    #event {
+        margin-top: 1rem;
+    }
+    .swiper-wrapper {
+        margin-top: 3rem;
+        height: 28rem;
     }
 
     /* -- FOOTER -- */
