--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,8 @@ header {
 .swiper-slide img {
     filter: saturate(0);
     transition: var(--transition);
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1;
+    object-fit: fill;
 }
 .swiper-slide:hover img {
     filter: saturate(1);
