--- a/css/about.css
+++ b/css/about.css
@@ -81,6 +81,8 @@
 
 .teacher__member-image img {
     filter: saturate(0);
+    aspect-ratio: 1;
+    object-fit: fill;
 }
 
 .teacher__member:hover img {
