--- a/css/about.css
+++ b/css/about.css
@@ -119,6 +119,46 @@
     padding: 1rem;
 }
 
+/* -- EXHIBITIONS -- */
+#exhibitions {
+    margin-top: 1rem;
+}
+.exhibitions__container {
+    position: relative;
+}
+.exhibitions__head > p {
+    width: 95rem;
+    text-align: center;
+}
+.exhibitions__gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 5rem;
+    gap: 3rem;
+}
+.exhibitions__gallery article {
+    border: 0.5rem solid var(--color-bg2);
+    transition: var(--transition);
+}
+.exhibitions__gallery article:nth-child(1) {
+    grid-row: 1/3;
+}
+.exhibitions__gallery article:nth-child(4) {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.exhibitions__gallery article img {
+    height: 100%;
+    filter: saturate(0);
+    transition: var(--transition);
+}
+.exhibitions__gallery article:hover img {
+    filter: saturate(1);
+}
+.exhibitions__gallery article:hover {
+    box-shadow: 0 4rem 4rem rgba(0, 0, 0, 0.5);
+}
+
 /* -- MEDIA QUERIES (TABLETS) -- */
 @media screen and (max-width: 1024px) {
     .about__students {
@@ -143,6 +183,19 @@
     .teacher__member {
         padding: 1rem;
     }
+
+    /* -- EXHIBITIONS -- */
+   .exhibitions__head > p {
+    width: 100%;
+    margin-top: 2rem;
+    }
+    .exhibitions__gallery {
+    margin-top: 3rem;
+    gap: 1rem;
+    }
+    .exhibitions__gallery article {
+    border: none;
+    }
 }
 
 /* -- MEDIA QUARIES (MOBILES) -- */
@@ -163,5 +216,24 @@
 
     .teacher__member p {
         margin-bottom: 1.5rem;
+    }
+
+    /* -- EXHIBITIONS -- */
+    #exhibitions {
+        margin-top: 6rem;
+    }
+    .exhibitions__head {
+        grid-template-columns: 1fr;
+    }
+    .exhibitions__head > p {
+        margin-top: 1rem;
+    }
+    .exhibitions__gallery {
+        display: block;
+    }
+    .exhibitions__gallery article {
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 1rem;
     }
 }
