--- a/css/style.css
+++ b/css/style.css
@@ -317,11 +317,12 @@ header {
     margin-top: 1rem;
 }
 .event__head {
-    display: flex;
+    display: center;
     justify-content: space-between;
 }
 .event__container p {
-    width: 45rem;
+    width: 95rem;
+    text-align: center;
 }
 .swiper-wrapper {
     margin-top: 3rem;
@@ -393,47 +394,6 @@ footer ul li a:hover {
     padding: 1.2rem;
     border-top: 1px solid var(--color-bg2);
 }
-
-/* -- EXHIBITIONS -- */
-#exhibitions {
-    margin-top: 1rem;
-}
-.exhibitions__container {
-    position: relative;
-}
-.exhibitions__head > p {
-    width: 95rem;
-    text-align: center;
-}
-.exhibitions__gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 5rem;
-    gap: 3rem;
-}
-.exhibitions__gallery article {
-    border: 0.5rem solid var(--color-bg2);
-    transition: var(--transition);
-}
-.exhibitions__gallery article:nth-child(1) {
-    grid-row: 1/3;
-}
-.exhibitions__gallery article:nth-child(4) {
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.exhibitions__gallery article img {
-    height: 100%;
-    filter: saturate(0);
-    transition: var(--transition);
-}
-.exhibitions__gallery article:hover img {
-    filter: saturate(1);
-}
-.exhibitions__gallery article:hover {
-    box-shadow: 0 4rem 4rem rgba(0, 0, 0, 0.5);
-}
-
 
 /* -- MEDIA QUERIES (TABLETS) -- */
 @media screen and (max-width: 1024px) {
@@ -582,19 +542,6 @@ footer ul li a:hover {
     height: 20rem
    }
 
-   /* -- EXHIBITIONS -- */
-   .exhibitions__head > p {
-    width: 100%;
-    margin-top: 2rem;
-    }
-    .exhibitions__gallery {
-    margin-top: 3rem;
-    gap: 1rem;
-    }
-    .exhibitions__gallery article {
-    border: none;
-    }
-
    /*  -- FOOTER -- */
    .footer__container {
     grid-template-columns: 1fr 1fr;
@@ -673,25 +620,6 @@ footer ul li a:hover {
     .swiper-wrapper {
         margin-top: 3rem;
         height: 28rem;
-    }
-
-    /* -- EXHIBITIONS -- */
-    #exhibitions {
-        margin-top: 6rem;
-    }
-    .exhibitions__head {
-        grid-template-columns: 1fr;
-    }
-    .exhibitions__head > p {
-        margin-top: 1rem;
-    }
-    .exhibitions__gallery {
-        display: block;
-    }
-    .exhibitions__gallery article {
-        width: 100%;
-        height: fit-content;
-        margin-bottom: 1rem;
     }
 
     /* -- FOOTER -- */
