--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,21 @@
     --transition: all 400ms ease;
 }
 
+/* -- SCROLLBAR -- */
+::-webkit-scrollbar {
+    width: 0.5rem;
+    background: rgb(229, 165, 93, 0.2);
+}
+::-webkit-scrollbar-thumb {
+    width: 100%;
+    background: var(--color-danger);
+    border-radius: 0.25rem;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.7;
@@ -461,6 +476,10 @@ footer ul li a:hover {
     animation-delay: 600ms;
    }
 
+   .nav__menu li:nth-child(5) {
+    animation-delay: 800ms;
+   }
+
    @keyframes animateNavItems {
     0% {
     transform: rotateZ(-90deg);
@@ -563,7 +582,7 @@ footer ul li a:hover {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-}
+   }
 }
 
 /* -- MEDIA QUARIES (PHONE) -- */
