--- a/css/404.css
+++ b/css/404.css
@@ -13,7 +13,7 @@ body {
     place-content: center;
 }
 
-/* -- MOBILE PHONE -- */
+/*  ---  MOBILE PHONES  ---  */
 .text {
     margin-bottom: 2rem;
     text-align: center;
@@ -75,7 +75,7 @@ button {
     cursor: pointer;
 }
 
-/* -- TABLET -- */
+/*  ---  TABLETS  ---  */
 @media only screen and (min-width: 900px) {
     .container {
         display: grid;
