--- a/css/about.css
+++ b/css/about.css
@@ -1,24 +1,20 @@
-/* -- STUDENTS -- */
+/*  ---  STUDENTS  ---  */
 .about__students {
     margin-top: 3rem;
 }
-
 .about__students-container {
     display: grid;
     grid-template-columns: 40% 60%;
     gap: 5rem;
 }
-
 .about__students-right > p {
     margin: 1.6rem 0 2.5rem;
 }
-
 .students__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
 }
-
 .student__card {
     background-color: var(--color-bg1);
     padding: 1.6rem;
@@ -26,12 +22,10 @@
     text-align: center;
     transition: var(--transition);
 }
-
 .student__card:hover {
     background: var(--color-bg2);
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
 }
-
 .student__icon {
     background: var(--color-danger);
     padding: 0.6rem;
@@ -40,31 +34,26 @@
     margin-bottom: 2rem;
     font-size: 2rem;
 }
-
 .student__card:nth-child(2) .student__icon {
     background: var(--color-success);
 }
-
 .student__card:nth-child(3) .student__icon {
     background: var(--color-primary);
 }
-
 .student__card p {
     margin-top: 1rem;
 }
 
-/* -- TEACHERS -- */
+/*  ---  TEACHERS  ---  */
 .teacher {
     background: var(--color-bg1);
     box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
 }
-
 .teacher__container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
 }
-
 .teacher__member {
     background: var(--color-bg2);
     padding: 2rem;
@@ -73,31 +62,25 @@
     position: relative;
     overflow: hidden;
 }
-
 .teacher__member:hover {
     background: transparent;
     border-color: var(--color-primary);
 }
-
 .teacher__member-image img {
     filter: saturate(0);
     aspect-ratio: 1;
     object-fit: fill;
 }
-
 .teacher__member:hover img {
     filter: saturate(1);
 }
-
 .teacher__member-info {
     text-align: center;
     margin-top: 1.4rem;
 }
-
 .teacher__member-info p {
     color: var(--color-light);
 }
-
 .teacher__member-socials {
     position: absolute;
     top: 50%;
@@ -110,16 +93,14 @@
     box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
     transition: var(--transition);
 }
-
 .teacher__member:hover .teacher__member-socials {
     right: 0;
 }
-
 .teacher__member-socials a {
     padding: 1rem;
 }
 
-/* -- EXHIBITIONS -- */
+/*  ---  EXHIBITIONS  ---  */
 #exhibitions {
     margin-top: 1rem;
 }
@@ -159,32 +140,28 @@
     box-shadow: 0 4rem 4rem rgba(0, 0, 0, 0.5);
 }
 
-/* -- MEDIA QUERIES (TABLETS) -- */
+/*  ---  MEDIA QUERIES (TABLETS)  ---  */
 @media screen and (max-width: 1024px) {
     .about__students {
         margin-top: 2rem;
     }
-
     .about__students-container {
         grid-template-columns: 1fr;
         gap: 4rem;
     }
-
     .about__students-left {
         width: 80%;
         margin: 0 auto;
     }
-
     .teacher__container {
         grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
     }
-
     .teacher__member {
         padding: 1rem;
     }
 
-    /* -- EXHIBITIONS -- */
+    /*  ---  EXHIBITIONS  ---  */
    .exhibitions__head > p {
     width: 100%;
     margin-top: 2rem;
@@ -198,27 +175,24 @@
     }
 }
 
-/* -- MEDIA QUARIES (MOBILES) -- */
+/*  ---  MEDIA QUARIES (MOBILES)  ---  */
 @media screen and (max-width: 600px) {
     .students__cards {
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
     }
-
     .teacher__container {
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
     }
-
     .teacher__member {
         padding: 0;
     }
-
     .teacher__member p {
         margin-bottom: 1.5rem;
     }
 
-    /* -- EXHIBITIONS -- */
+    /*  ---  EXHIBITIONS  ---  */
     #exhibitions {
         margin-top: 1rem;
     }
