--- a/css/bsias.css
+++ b/css/bsias.css
@@ -1,5 +1,5 @@
 /*  ---  HEADER  ---  */
-.header-bscs {
+.header-bsias {
     position: relative;
     top: 5rem;
     overflow: hidden;
@@ -7,77 +7,77 @@
     margin-top: 2rem;
     margin-bottom: 8rem;
 }
-.header__container-bscs {
+.header__container-bsias {
     display: grid;
     grid-template-columns: 50% 40%;
     align-items: center;
     gap: 5rem;
     height: 100%;
 }
-.header__left-bscs p {
+.header__left-bsias p {
     margin: 1rem 0 2.4rem;
 }
 
-/*  ---  BSCS CATEGORIES  ---  */
-.categories-bscs {
+/*  ---  BSIAS CATEGORIES  ---  */
+.categories-bsias {
     background: var(--color-bg1);
     height: 32rem;
 }
-.categories-bscs h1 {
+.categories-bsias h1 {
     line-height: 1;
     margin-bottom: 3rem;
 }
-.categories__container-bscs {
+.categories__container-bsias {
     display: grid;
     grid-template-columns: 40% 60%;
 }
-.categories__left-bscs {
+.categories__left-bsias {
     margin-right: 4rem;
 }
-.categories__left-bscs p {
+.categories__left-bsias p {
     margin: 1rem 0 3rem;
 }
-.categories__right-bscs {
+.categories__right-bsias {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.2rem;
 }
-.category-bscs {
+.category-bsias {
     background: var(--color-bg2);
     padding: 2rem;
     border-radius: 2rem;
     transition: var(--transition);
 }
-.category-bscs:hover {
+.category-bsias:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
     z-index: 1;
 }
-.category-bscs:nth-child(2) .category__icon-bscs {
+.category-bsias:nth-child(2) .category__icon-bsias {
     background: var(--color-danger);
 }
-.category-bscs:nth-child(3) .category__icon-bscs {
+.category-bsias:nth-child(3) .category__icon-bsias {
     background: var(--color-success);
 }
-.category-bscs:nth-child(4) .category__icon-bscs {
+.category-bsias:nth-child(4) .category__icon-bsias {
     background: var(--color-warning);
 }
-.category-bscs:nth-child(5) .category__icon-bscs {
+.category-bsias:nth-child(5) .category__icon-bsias {
     background: var(--color-success);
 }
-.category__icon-bscs {
+.category__icon-bsias {
     background: var(--color-primary);
     padding: 0.7rem;
     border-radius: 0.9rem;
 }
-.category-bscs h5 {
+.category-bsias h5 {
     margin: 2rem 0 1rem;
 }
-.category-bscs p {
+.category-bsias p {
     font-size: 0.85rem;
 }
 
 /*  ---  SECTION  ---  */
-.bscs {
+.bsias {
     position: relative;
     top: 5rem;
     overflow: hidden;
@@ -85,24 +85,24 @@
     margin-top: 2rem;
     margin-bottom: 8rem;
 }
-.bscs__container {
+.bsias__container {
     display: grid;
     grid-template-columns: 60% 29%;
     align-items: center;
     gap: 5rem;
     height: 100%;
 }
-.bscs__right-image {
+.bsias__right-image {
     border: 0.5rem solid var(--color-bg2);
     height: fit-content;
     overflow: hidden;
     transition: var(--transition);
     object-fit: fill;
 }
-.bscs__right-image:hover {
+.bsias__right-image:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.4);
 }
-.bscs__left p {
+.bsias__left p {
     margin: 1rem 0 2.4rem;
 }
 
@@ -113,25 +113,25 @@
     }
 
     /*  ---  HEADER  ---  */
-    .header__bscs {
+    .header__bsias {
         height: 70vh;
         margin-bottom: 2rem;
     }
 
     /*  ---  CATEGORIES  ---  */
-    .categories-bscs {
+    .categories-bsias {
         height: auto;
     }
-    .categories__container-bscs {
+    .categories__container-bsias {
         grid-template-columns: 1fr;
         gap: 3rem;
     }
-    .categories__left-bscs {
+    .categories__left-bsias {
         margin-right: 0;
     }
 
-    /*  ---  BSCS  ---  */
-    .bscs {
+    /*  ---  BSIAS  ---  */
+    .bsias {
         height: 70vh;
         margin-bottom: 2rem;
     }
@@ -144,48 +144,48 @@
     }
 
     /*  ---  HEADER  ---  */
-    .header__bscs {
-        height: 100vh;
+    .header__bsias {
+        height: 110vh;
     }
-    .header__container-bscs {
+    .header__container-bsias {
         grid-template-columns: 1fr;
         text-align: center;
         margin-top: 0;
     }
-    .header__left-bscs p {
+    .header__left-bsias p {
         margin-top: 1.3rem;
     }
-    .header__right-bscs {
+    .header__right-bsias {
         display: none;
     }
 
     /*  ---  CATEGORIES  ---  */
-    .category-bscs {
+    .category-bsias {
         padding: 1rem;
         border-radius: 1rem;
     }
-    .categories__right-bscs {
+    .categories__right-bsias {
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
     }
-    .category__icon-bscs {
+    .category__icon-bsias {
         margin-top: 4px;
         display: inline-block;
     }
 
     /*  ---  SECTION  ---  */
-    .bscs {
+    .bsias {
         height: 90vh;
     }
-    .bscs__container {
+    .bsias__container {
         grid-template-columns: 1fr;
         text-align: center;
         margin-top: 0;
     }
-    .bscs__left p {
+    .bsias__left p {
         margin-top: 1.3rem;
     }
-    .bscs__right-image {
+    .bsias__right-image {
         display: none;
     }
 }
