--- a/css/contact.css
+++ b/css/contact.css
@@ -9,7 +9,7 @@
     border-radius: 1rem;
 }
 
-/* -- ASIDE -- */
+/*  ---  ASIDE  ---  */
 .contact__aside {
     background: var(--color-primary);
     padding: 3rem;
@@ -17,35 +17,29 @@
     position: relative;
     bottom: 10rem;
 }
-
 .aside__image {
     width: 12rem;
     margin-bottom: 2rem;
 }
-
 .contact__aside h2 {
     text-align: left;
     margin-bottom: 4rem;
 }
-
 .contact__aside p {
     font-size: 0.9rem;
     margin-bottom: 2rem;
 }
-
 .contact__details li {
     display: flex;
     gap: 1rem;
     align-items: center;
     margin-bottom: 1rem;
 }
-
 .contact__socials {
     display: flex;
     gap: 0.8rem;
     margin-top: 3rem;
 }
-
 .contact__socials a {
     background: var(--color-bg2);
     padding: 0.5rem;
@@ -53,24 +47,21 @@
     font-size: 0.9rem;
     transition: var(--transition);
 }
-
 .contact__socials a:hover {
     background:  transparent;
 }
 
-/* -- CONTACT FORM -- */
+/*  ---  CONTACT FORM  ---  */
 .contact__form {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
     margin-right: 4rem;
 }
-
 .form__name {
     display: flex;
     gap: 1.2rem;
 }
-
 .contact__form input[type="text"] {
     width: 50%;
 }
@@ -80,39 +71,35 @@ input, textarea {
     background: var(--color-bg);
     color: var(--color-white);
 }
-
 .contact__form .btn {
     width: max-content;
     margin-top: 1rem;
     cursor: pointer;
 }
 
-/* -- MEDIA QUERIES (TABLETS) -- */
+/*  ---  MEDIA QUERIES (TABLETS)  ---  */
 @media screen and (max-width:1024px) {
     .contact {
         padding-bottom: 0;
     }
-
     .contact__container {
         gap: 1.5rem;
         margin-top: 3rem;
         height: auto;
         padding: 1.5rem;
     }
-
     .contact__aside {
         width: auto;
         padding: 1.5rem;
         bottom: 0;
     }
-
     .contact__form {
         align-self: center;
         margin-right: 1.5rem;
     }
 }
 
-/* -- MEDIA QUERIES (PHONES) -- */
+/*  ---  MEDIA QUERIES (PHONES)  ---  */
 @media screen and (max-width: 600px) {
     .contact__container {
         grid-template-columns: 1fr;
@@ -120,15 +107,12 @@ input, textarea {
         margin-top: 0;
         padding: 0;
     }
-
     .contact__form {
         margin: 0 1.5rem 3rem;
     }
-
     .form__name {
         flex-direction: column;
     }
-
     .form__name input[type="text"] {
         width: 100%;
     }
