--- a/css/about.css
+++ b/css/about.css
@@ -7,8 +7,15 @@
     grid-template-columns: 40% 60%;
     gap: 5rem;
 }
+.about__students-right h1 {
+    color: var(--color-bg2);
+}
+.about__students-right h3 {
+    color: var(--color-gray-900);
+}
 .about__students-right > p {
     margin: 1.6rem 0 2.5rem;
+    color: var(--color-gray-900);
 }
 .students__cards {
     display: grid;
@@ -16,15 +23,14 @@
     gap: 1.5rem;
 }
 .student__card {
-    background-color: var(--color-bg1);
+    background-color: var(--color-gray-200);
     padding: 1.6rem;
     border-radius: 1rem;
     text-align: center;
     transition: var(--transition);
 }
 .student__card:hover {
-    background: var(--color-bg2);
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
 }
 .student__icon {
     background: var(--color-danger);
@@ -42,12 +48,12 @@
 }
 .student__card p {
     margin-top: 1rem;
+    color: var(--color-gray-900);
 }
 
 /*  ---  TEACHERS  ---  */
-.teacher {
-    background: var(--color-bg1);
-    box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
+.teacher h2 {
+    color: var(--color-bg2);
 }
 .teacher__container {
     display: grid;
@@ -55,16 +61,16 @@
     gap: 2rem;
 }
 .teacher__member {
-    background: var(--color-bg2);
-    padding: 2rem;
-    border: 1px solid transparent;
+    background: var(--color-gray-200);
+    padding: 0.5rem;
     transition: var(--transition);
     position: relative;
     overflow: hidden;
 }
 .teacher__member:hover {
-    background: transparent;
-    border-color: var(--color-primary);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
+    transition: var(--transition);
+    z-index: 1;
 }
 .teacher__member-image img {
     filter: saturate(0);
@@ -78,8 +84,11 @@
     text-align: center;
     margin-top: 1.4rem;
 }
+.teacher__member-info h4 {
+    color: var(--color-bg2);
+}
 .teacher__member-info p {
-    color: var(--color-light);
+    color: var(--color-gray-900);
 }
 .teacher__member-socials {
     position: absolute;
@@ -88,7 +97,7 @@
     right: -100%;
     display: flex;
     flex-direction: column;
-    background: var(--color-primary);
+    background: var(--color-gray-200);
     border-radius: 1rem 0 0 1rem;
     box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
     transition: var(--transition);
@@ -98,6 +107,10 @@
 }
 .teacher__member-socials a {
     padding: 1rem;
+    color: var(--color-gray-900);
+}
+.teacher__member-socials a:hover {
+    color: var(--color-crimson);
 }
 
 /*  ---  EXHIBITIONS  ---  */
@@ -106,6 +119,9 @@
 }
 .exhibitions__container {
     position: relative;
+}
+.exhibitions__title {
+    color: var(--color-bg2);
 }
 .exhibitions__head > p {
     width: 95rem;
@@ -118,7 +134,7 @@
     gap: 3rem;
 }
 .exhibitions__gallery article {
-    border: 0.5rem solid var(--color-bg2);
+    border: 0.5rem solid var(--color-gray-200);
     transition: var(--transition);
 }
 .exhibitions__gallery article:nth-child(1) {
