--- a/css/act.css
+++ b/css/act.css
@@ -14,13 +14,16 @@
     gap: 5rem;
     height: 100%;
 }
+.header__left-act h1 {
+    color: var(--color-bg2);
+}
 .header__left-act p {
     margin: 1rem 0 2.4rem;
 }
 
 /*  ---  ACT CATEGORIES  ---  */
 .categories-act {
-    background: var(--color-bg1);
+    background: var(--color-gray-200);
     height: 32rem;
 }
 .categories-act h1 {
@@ -49,7 +52,7 @@
     transition: var(--transition);
 }
 .category-act:hover {
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 .category-act:nth-child(2) .category__icon-act {
@@ -71,9 +74,11 @@
 }
 .category-act h5 {
     margin: 2rem 0 1rem;
+    color: var(--color-gray-100);
 }
 .category-act p {
     font-size: 0.85rem;
+    color: var(--color-gray-100);
 }
 
 /*  ---  SECTION  ---  */
@@ -93,7 +98,7 @@
     height: 100%;
 }
 .act__right-image {
-    border: 0.5rem solid var(--color-bg2);
+    border: 0.5rem solid var(--color-gray-200);
     height: fit-content;
     overflow: hidden;
     transition: var(--transition);
@@ -101,6 +106,9 @@
 }
 .act__right-image:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.4);
+}
+.act__left h1 {
+    color: var(--color-bg2);
 }
 .act__left p {
     margin: 1rem 0 2.4rem;
