--- a/css/style.css
+++ b/css/style.css
@@ -21,31 +21,30 @@
     --color-bg1: #2e3267;
     --color-bg2: #424890;
 
+    --color-gray-100: #f5f5f5;
+    --color-gray-200: #dadee2;
+    --color-gray-300: #8e9093;
+    --color-gray-400: #999;
+    --color-gray-500: #44484b;
+    --color-gray-600: #363636;
+    --color-gray-700: #222;
+    --color-gray-800: #1f1f1f;
+    --color-gray-900: #111;
+
+    --color-crimson: #cc133c;
+    --color-crystal: #930128;
+
     --container-width-lg: 80%;
     --container-width-md: 90%;
     --container-width-sm: 94%;
 
     --transition: all 400ms ease;
 }
-
-/*  ---  SCROLLBAR  ---  */
-::-webkit-scrollbar {
-    width: 0.5rem;
-    background: rgb(229, 165, 93, 0.2);
-}
-::-webkit-scrollbar-thumb {
-    width: 100%;
-    background: var(--color-danger);
-    border-radius: 0.25rem;
-}
-html {
-    scroll-behavior: smooth;
-}
 body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.7;
-    color: var(--color-white);
-    background: var(--color-bg);
+    color: var(--color-gray-600);
+    background: var(--color-gray-100);
 }
 .container {
     width: var(--container-width-lg);
@@ -59,11 +58,7 @@ section h2 {
     margin-bottom: 4rem;
 }
 
-h1, 
-h2, 
-h3, 
-h4, 
-h5 {
+h1, h2, h3, h4, h5 {
     line-height: 1.2;
 }
 
@@ -84,7 +79,7 @@ h4 {
 }
 
 a {
-    color: var(--color-white);
+    color: var(--color-gray-900);
 }
 img {
     width: 100%;
@@ -102,12 +97,12 @@ img {
 }
 .btn:hover {
     background: transparent;
-    color: var(--color-white);
-    border-color: var(--color-white);
+    color: var(--color-gray-400);
+    border-color: var(--color-gray-400);
 }
 .btn-primary {
-    background: var(--color-danger);
-    color: var(--color-white)
+    background: var(--color-crimson);
+    color: var(--color-gray-100)
 }
 
 /*  ---  NAVBAR  ---  */
@@ -122,8 +117,8 @@ nav {
 
 /*  ---  CHANGE NAVBAR STYLE ON SCROLL USING JAVASCRIPT  ---  */
 .window-scroll {
-    background: rgba(46, 50, 103, 0.8);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    background: rgba(96, 96, 96, 0.8);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
 }
 .nav__container {
     height: 100%;
@@ -144,7 +139,8 @@ nav button {
     transition: var(--transition);
 }
 .nav__menu a:hover {
-    color: var(--color-bg2);
+    text-decoration: underline;
+    color: var(--color-crimson);
 }
 
 /*  ---  HEADER  ---  */
@@ -165,15 +161,19 @@ header {
 .header__left p {
     margin: 1rem 0 2.4rem;
 }
+.header__left h1 {
+    color: var(--color-bg2);
+}
 
 /*  ---  CATEGORIES  ---  */
 .categories {
-    background: var(--color-bg1);
+    background: var(--color-gray-200);
     height: 32rem;
 }
 .categories h1 {
     line-height: 1;
     margin-bottom: 3rem;
+    color: var(--color-bg2);
 }
 .categories__container {
     display: grid;
@@ -184,6 +184,7 @@ header {
 }
 .categories__left p {
     margin: 1rem 0 3rem;
+    color: var(--color-gray-900);
 }
 .categories__right {
     display: grid;
@@ -197,7 +198,7 @@ header {
     transition: var(--transition);
 }
 .category:hover {
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 .category:nth-child(2) .category__icon {
@@ -219,14 +220,19 @@ header {
 }
 .category h5 {
     margin: 2rem 0 1rem;
+    color: var(--color-gray-100);
 }
 .category p {
     font-size: 0.85rem;
+    color: var(--color-gray-100);
 }
 
 /*  ---  POPULAR COURSES  ---  */
 .courses {
     margin-top: 10rem;
+}
+.courses h2 {
+    color: var(--color-bg2);
 }
 .courses__container {
     display: grid;
@@ -234,14 +240,14 @@ header {
     gap: 2rem;
 }
 .course {
-    background: var(--color-bg1);
+    background: var(--color-gray-200);
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
 }
 .course:hover {
-    background: transparent;
-    border-color: var(--color-primary);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 .course__info {
     padding: 2rem;
@@ -249,17 +255,24 @@ header {
 .course__info p {
     margin: 1.2rem 0 2rem;
     font-size: 0.9rem;
+    color: var(--color-gray-900);
+}
+.course__info h4 {
+    color: var(--color-bg2);
 }
 
 /*  ---  FREQUENTLY ASK QUESTIONS  ---  */
 .faqs {
-    background: var(--color-bg1);
-    box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
+    color: var(--color-gray-900);
+}
+.faqs h2 {
+    color: var(--color-bg2);
 }
 .faqs__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+    color: var(--color-gray-900);
 }
 .faq {
     padding: 2rem;
@@ -267,12 +280,18 @@ header {
     align-items: center;
     gap: 1.4rem;
     height: fit-content;
-    background: var(--color-primary);
+    background: var(--color-gray-200);
     cursor: pointer;
+}
+.faq:hover {
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.2);
+    transition: var(--transition);
+    z-index: 1;
 }
 .faq h4 {
     font-size: 1rem;
     line-height: 2.2;
+    color: var(--color-bg2);
 }
 .faq__icon {
     align-self: flex-start;
@@ -281,6 +300,7 @@ header {
 .faq p {
     margin: 0.8rem;
     display: none;
+    color: var(--color-gray-900);
 }
 .faq.open p {
     display: block;
@@ -294,6 +314,9 @@ header {
     display: center;
     justify-content: space-between;
 }
+.event__head h2 {
+    color: var(--color-bg2);
+}
 .event__container p {
     width: 95rem;
     text-align: center;
@@ -304,14 +327,14 @@ header {
     padding-bottom: 1rem;
 }
 .swiper-slide {
-    border: 0.5rem solid var(--color-bg2);
+    border: 0.5rem solid var(--color-gray-200);
     height: fit-content;
     max-height: 36rem;
     overflow: hidden;
     transition: var(--transition);
 }
 .swiper-slide:hover {
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.4);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.2);
 }
 .swiper-slide img {
     filter: saturate(0);
@@ -323,12 +346,12 @@ header {
     filter: saturate(1);
 }
 .swiper-pagination-bullet {
-    background: var(--color-primary);
+    background: var(--color-gray-900);
 }
 
 /*  ---  FOOTER  ---  */
 footer {
-    background: var(--color-bg1);
+    background: var(--color-gray-200);
     padding-top: 5rem;
     font-size: 0.9rem;
 }
@@ -348,6 +371,7 @@ footer ul li {
 }
 footer ul li a:hover {
     text-decoration: underline;
+    color: var(--color-crimson);
 }
 .footer__socials {
     display: flex;
@@ -359,7 +383,7 @@ footer ul li a:hover {
     text-align: center;
     margin-top: 4rem;
     padding: 1.2rem;
-    border-top: 1px solid var(--color-bg2);
+    border-top: 1px solid var(--color-crimson);
 }
 
 /*  ---  MEDIA QUERIES (TABLETS)  ---  */
@@ -386,7 +410,7 @@ footer ul li a:hover {
     display: inline-block;
     background: transparent;
     font-size: 1.8rem;
-    color: var(--color-white);
+    color: var(--color-gray-200);
     cursor: pointer;
    }
    nav button#close-menu-btn {
@@ -434,7 +458,8 @@ footer ul li a:hover {
    }
 
    .nav__menu li a {
-    background: rgba(46, 50, 103, 0.8);
+    background: rgba(96, 96, 96, 0.8);
+    color: var(--color-gray-100);
     box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
@@ -442,8 +467,8 @@ footer ul li a:hover {
     place-items: center;
    }
    .nav__menu li a:hover {
-    background: var(--color-bg2);
-    color: var(--color-white);
+    background: var(--color-gray-200);
+    color: var(--color-gray-100);
    }
 
    /*  ---  HEADER  ---  */
