--- a/css/404.css
+++ b/css/404.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     min-height: 100vh;
-    background: var(--color-bg);
+    background: var(--color-gray-200);
     display: grid;
     place-content: center;
 }
@@ -30,10 +30,10 @@ img {
 }
 h1 {
     font-style: italic;
-    color: var(--color-primary);
+    color: var(--color-bg2);
 }
 p {
-    color: var(--color-white);
+    color: var(--color-gray-900);
     margin-top: 1rem;
     font-size: 1.2rem;
     font-weight: 500;
@@ -41,7 +41,7 @@ p {
 a {
     position: relative;
     margin-top: 2rem auto 0;
-    background-color: var(--color-primary);
+    background-color: var(--color-bg2);
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 0.3rem;
@@ -55,7 +55,7 @@ a::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 1;
     transform: scaleX(0);
     transform-origin: right;
@@ -73,6 +73,7 @@ button {
     background: transparent;
     border: none;
     cursor: pointer;
+    color: var(--color-gray-200);
 }
 
 /*  ---  TABLETS  ---  */
