--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@
     --color-bg1: #2e3267;
     --color-bg2: #424890;
 
+    --color-rotate-01: #e81cff;
+    --color-rotate-02: #40c9ff;
+    --color-rotate-03: #fc00ff;
+    --color-rotate-04: #00dbde;
+
     --color-gray-100: #f5f5f5;
     --color-gray-200: #dadee2;
     --color-gray-300: #8e9093;
@@ -87,24 +92,47 @@ img {
     object-fit: cover;
 }
 .btn {
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     display: inline-block;
-    background: var(--color-white);
-    color: var(--color-black);
-    padding: 1rem 2rem;
-    border: 1px solid transparent;
-    font-weight: 500;
-    transition: var(--transition);
+    text-align: center;
+    font-weight: bold;
+    padding: 0.7em 2em;
+    border: 3px solid var(--color-crimson);
+    border-radius: 2px;
+    position: relative;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+    color: var(--color-crimson);
+    text-decoration: none;
+    transition: 0.3s ease all;
+    z-index: 1;
+} 
+.btn:before {
+    transition: 0.5s all ease;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background-color: var(--color-crimson);
+    z-index: -1;
+} 
+.btn:hover, .btn:focus {
+    color: var(--color-gray-100);
+} 
+.btn:hover:before, .btn:focus:before {
+    transition: 0.5s all ease;
+    left: 0;
+    right: 0;
+    opacity: 1;
+} 
+.btn:active {
+    transform: scale(0.9);
 }
-.btn:hover {
-    background: transparent;
-    color: var(--color-gray-400);
-    border-color: var(--color-gray-400);
-}
-.btn-primary {
-    background: var(--color-crimson);
-    color: var(--color-gray-100)
-}
-
+ 
 /*  ---  NAVBAR  ---  */
 nav {
     background: transparent;
@@ -119,6 +147,7 @@ nav {
 .window-scroll {
     background: rgba(96, 96, 96, 0.8);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(5px);
 }
 .nav__container {
     height: 100%;
@@ -140,7 +169,7 @@ nav button {
 }
 .nav__menu a:hover {
     text-decoration: underline;
-    color: var(--color-crimson);
+    color: var(--color-crystal);
 }
 
 /*  ---  HEADER  ---  */
@@ -468,7 +497,7 @@ footer ul li a:hover {
    }
    .nav__menu li a:hover {
     background: var(--color-gray-200);
-    color: var(--color-gray-100);
+    color: var(--color-crimson);
    }
 
    /*  ---  HEADER  ---  */
